export enum StartlistStatus {
  DRAFT = 'DRAFT',
  SETTINGS_ENTERED = 'SETTINGS_ENTERED',
  LANE_ORDER_ASSIGNED = 'LANE_ORDER_ASSIGNED',
  PLAYER_ORDER_ASSIGNED = 'PLAYER_ORDER_ASSIGNED',
  START_TIMES_ASSIGNED = 'START_TIMES_ASSIGNED',
  FINALIZED = 'FINALIZED',
}
